--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </div>
     <nav class="navbar navbar-dark bg-dark">
+<a class="navbar-brand" href="/IcoderTutorialBootstrap/">Icoder</a>
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,10 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/IcoderTutorialBootstrap/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/about.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="/IcoderTutorialBootstrap/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -63,7 +64,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/IcoderTutorialBootstrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
 
