--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/IcoderTutorialBootstrap/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/about.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="/IcoderTutorialBootstrap/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/IcoderTutorialBootstrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
 
